@@ -23,6 +23,7 @@ Improvements:
    * Improve elm map module loading/searching efficiency.
    * Diskselector handles dyanmic show/hide of icons now like buttons.
    * Plug widget handles image object deletion
+   * Handle COMPOUND_TEXT cnp
 
 Fixes:
 
